--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "@auth0/nextjs-auth0": "^1.7.0",
     "cookies-next": "^2.0.4",
     "mongodb": "^4.4.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/": "auth0/auth0-react",
     "@types/mongodb": "^4.0.7",
     "@types/node": "17.0.22",
     "@types/react": "17.0.41",
+    "@types/react-dom": "^17.0.14",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
