--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "17.0.22",
     "@types/react": "17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
