--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
     "@auth0/nextjs-auth0": "^1.7.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "cookies-next": "^2.0.4",
+    "install": "^0.13.0",
     "mongodb": "^4.4.1",
     "next": "12.1.0",
     "react": "17.0.2",
