--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^1.9.0",
     "@auth0/nextjs-auth0": "^1.7.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "cookies-next": "^2.0.4",
     "install": "^0.13.0",
+    "jest": "^27.5.1",
     "mongodb": "^4.4.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-hooks": "^1.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/": "auth0/auth0-react",
+    "@types/jest": "^27.4.1",
     "@types/mongodb": "^4.0.7",
     "@types/node": "17.0.22",
     "@types/react": "17.0.41",
